--- a/widgets/build.gradle
+++ b/widgets/build.gradle
@@ -3,4 +3,8 @@ apply plugin: 'com.android.library'
 android {
     compileSdkVersion 21
     buildToolsVersion "21.0.2"
+
+    defaultConfig {
+        minSdkVersion 11
+    }
 }
