--- a/KitchenSink/app/src/main/AndroidManifest.xml
+++ b/KitchenSink/app/src/main/AndroidManifest.xml
@@ -24,6 +24,14 @@
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value="flipagram.android.app.kitchensink.KitchenSinkActivity" />
         </activity>
+        <activity
+            android:name=".RatioLayoutActivity"
+            android:label="@string/title_activity_ratio_layout"
+            android:parentActivityName=".KitchenSinkActivity" >
+            <meta-data
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value="flipagram.android.app.kitchensink.KitchenSinkActivity" />
+        </activity>
     </application>
 
 </manifest>
