--- a/PatternCharacterStyleTextWatcher/app/build.gradle
+++ b/PatternCharacterStyleTextWatcher/app/build.gradle
@@ -1,7 +1,8 @@
 apply plugin: 'com.android.application'
 
 android {
-    compileSdkVersion 21
+    compileSdkVersion rootProject.ext.compileSdkVersion
+    buildToolsVersion rootProject.ext.buildToolsVersion
 
     defaultConfig {
         applicationId "flipagram.pcstw"
