--- a/KitchenSink/app/build.gradle
+++ b/KitchenSink/app/build.gradle
@@ -2,6 +2,7 @@ apply plugin: 'com.android.application'
 
 android {
     compileSdkVersion 21
+    buildToolsVersion "22.0.1"
 
     defaultConfig {
         applicationId "flipagram.android.app.squarebleedrelativelayout"
