--- a/widgets/build.gradle
+++ b/widgets/build.gradle
@@ -8,3 +8,7 @@ android {
         minSdkVersion 11
     }
 }
+dependencies {
+    compile fileTree(dir: 'libs', include: ['*.jar'])
+    compile 'com.android.support:appcompat-v7:22.2.0'
+}
